--- a/index.html
+++ b/index.html
@@ -49,9 +49,7 @@ Global Center for Big Mobile Intelligence (<a href="http://www.cs.cqu.edu.cn/">B
 <a href="http://bmi.siat.ac.cn/index.php/qu/">Qiang Qu</a> and Prof. <a href="http://minyang.me">Min Yang</a> since December 2017.
 </p>
 <p>
-I'm a M.S. student at the 
-<a href="http://www.cs.cqu.edu.cn/">School of Software Theory and Technology Chongqing Key Lab</a>, 
-Department of Computer Science and Technology, 
+Meanwhile, I'm a M.S. student at the Department of Computer Science and Technology, 
 Chongqing University (<a href="http://english.cqu.edu.cn/">CQU</a>), under the supervision of Prof. 
 <a href="http://yz.cqu.edu.cn/view_teacher.php?tid=14025">Yunni Xia</a> since September 2015. Previously, I received my bachelor degree in CQU in June, 2015.
 </p>
@@ -96,12 +94,7 @@ Chongqing University (<a href="http://english.cqu.edu.cn/">CQU</a>), under the s
 <h4>Experience</h4>
 <ul>
   <li>
-    <strong>Research Intern</strong> | 
-    The Global Center for Big Mobile Intelligence (<a href="http://bmi.siat.ac.cn"><span class="color-blue">BMI</span></a>),
-    <span>
-      Shenzhen Institutes of Advanced Technology (<a href="http://www.siat.ac.cn"><span class="color-blue">SIAT</span></a>), 
-      <a href="http://www.cas.cn"><span class="color-blue">Chinese Academy of Sciences</span></a>
-    </span><br/>
+    <strong>Research Intern</strong> | BMI, SIAT, Chinese Academy of Sciences<br/>
     <strong>Topic:</strong> Natural Language Processing<br/>
     Dec 2017 - present
   </li>
@@ -123,8 +116,8 @@ Chongqing University (<a href="http://english.cqu.edu.cn/">CQU</a>), under the s
 <h4>Awards</h4>
 <ul>
   <li><strong>2nd place,</strong> The Intelligent Investment Adviser Game of the Big Data and Artificial Intelligence Innovation and Entrepreneurship Contest of 2017.</li>
-  <li>2nd prize, Scholarship, Chongqing University (2017).</li>
-  <li>2nd prize, Scholarship, Chongqing University (2016).</li>
+<!--   <li>2nd prize, Scholarship, Chongqing University (2017).</li>
+  <li>2nd prize, Scholarship, Chongqing University (2016).</li> -->
   <li>2nd prize, Chongqing Division, China Undergraduate Mathematical Contest in Modeling (2013).</li>
   <li>National Endeavor Scholarship (top 5%) (2012).</li>
   <li>2nd prize, Scholarship, Chongqing University (2012).</li>
@@ -132,7 +125,7 @@ Chongqing University (<a href="http://english.cqu.edu.cn/">CQU</a>), under the s
 
 <h4>Others</h4>
 <p>
-Skills and Self-evaluation (<a href="self-evaluation.html"><strong class="color-blue">Click</strong></a>).
+Click <a href="self-evaluation.html"><strong class="color-blue">here</strong></a> to see my Skills and Self-evaluation.
 </p>
 <p>
 Thank you for visiting.
