--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@ Chongqing University (<a href="http://english.cqu.edu.cn/">CQU</a>), under the s
 
 <h4>Recent Highlights</h4>
 <blockquote>
-  <span style="font-size: 10px; font-style: italic; color: #999;">
+<!--   <span style="font-size: 10px; font-style: italic; color: #999;">
     Note: Both <i>Yongbo Wang</i> and <i>YongBuo Wang</i> are my names.
-  </span>
+  </span> -->
 </blockquote>
 {% for post in site.papers %}
   {% include paper.html paper=post %}
