--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@ Chongqing University (<a href="http://english.cqu.edu.cn/">CQU</a>), under the s
 </p>
 
 <h4>Recent Highlights</h4>
-<blockquote>
-<!--   <span style="font-size: 10px; font-style: italic; color: #999;">
+<!-- <blockquote>
+  <span style="font-size: 10px; font-style: italic; color: #999;">
     Note: Both <i>Yongbo Wang</i> and <i>YongBuo Wang</i> are my names.
-  </span> -->
-</blockquote>
+  </span>
+</blockquote> -->
 {% for post in site.papers %}
   {% include paper.html paper=post %}
 {% endfor %}
@@ -97,6 +97,7 @@ Chongqing University (<a href="http://english.cqu.edu.cn/">CQU</a>), under the s
     <strong>Research Intern</strong> | BMI, SIAT, Chinese Academy of Sciences<br/>
     <strong>Topic:</strong> Natural Language Processing<br/>
     Dec 2017 - present
+    <strong>supervisor: </strong><a href="http://bmi.siat.ac.cn/index.php/qu/">Prof. Qiang Qu</a> and <a href="http://minyang.me">Prof. Min Yang</a><br/>
   </li>
   <li>
     <strong>Research Intern</strong> | 
