--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@ picture: life
 
 <h4>Biography</h4>
 <p>
-I am now a visiting student in the Artificial Intelligence and Natural Language Processing team in 
-Global Center for Big Mobile Intelligence (<a href="http://www.cs.cqu.edu.cn/">BMI</a>) in Shenzhen Institutes of Advanced Technology (<a href="http://www.siat.ac.cn">SIAT</a>), <a href="http://www.cas.cn">Chinese Academy of Sciences</a>, under the supervision of Prof. 
+I am now a visiting student in the AI&amp;NLP team in <a href="http://www.cs.cqu.edu.cn/">BMI</a> in <a href="http://www.siat.ac.cn">SIAT</a>, <a href="http://www.cas.cn">Chinese Academy of Sciences</a>, under the supervision of Prof. 
 <a href="http://bmi.siat.ac.cn/index.php/qu/">Qiang Qu</a> and Prof. <a href="http://minyang.me">Min Yang</a> since December 2017.
 </p>
 <p>
