--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ I am now a visiting student in the AI&amp;NLP team in <a href="http://www.cs.cqu
 <a href="http://bmi.siat.ac.cn/index.php/qu/">Qiang Qu</a> and Prof. <a href="http://minyang.me">Min Yang</a> since December 2017. Meanwhile, I'm a M.S. student at the Department of Computer Science and Technology, Chongqing University (<a href="http://english.cqu.edu.cn/">CQU</a>), under the supervision of Prof. <a href="http://yz.cqu.edu.cn/view_teacher.php?tid=14025">Yunni Xia</a> since September 2015. Previously, I received my bachelor degree in CQU in June, 2015.
 </p>
 <p>
-Download My <a href="CV/CV_YongboWang.pdf"><strong class="color-blue">Resume/CV.</strong></a>
+Download My <a href="CV/CV_YongboWang.pdf" style="text-decoration: underline;"><strong class="color-blue">Resume/CV</strong></a>
 </p>
 
 <h4>Research Interests</h4>
@@ -119,7 +119,7 @@ Download My <a href="CV/CV_YongboWang.pdf"><strong class="color-blue">Resume/CV.
 
 <h4>Others</h4>
 <p>
-Click <a href="self-evaluation.html"><strong class="color-blue">here</strong></a> to see my Skills and Self-evaluation.
+Click <a href="self-evaluation.html" style="text-decoration: underline;"><strong class="color-blue">here</strong></a> to see my Skills and Self-evaluation.
 </p>
 <br/>
 <p>
