--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ I am now a visiting student in the AI&amp;NLP team in <a href="http://www.cs.cqu
 Download My <a href="CV/CV_YongboWang.pdf"><strong class="color-blue-line">Resume/CV</strong></a>
 </p>
 
-<h4 style="border-top: 1px dotted #eee;">Research Interests</h4>
+<h4 style="border-top: 1px solid #eee; margin-top: 20px;">Research Interests</h4>
 <!-- <blockquote>
   <span style="font-size: 10px; font-style: italic; color: #999;">
     <i>
