--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Yongbo Wang
 picture: life
 ---
-<div class="page-header" style="border-bottom: 1px solid #ccc;">
+<div class="page-header" style="border-bottom: 2px solid #eee;">
   <div class="row">
     <div class="col-sm-12">
       <h3>
@@ -51,7 +51,8 @@ I am now a visiting student in the AI&amp;NLP team in <a href="http://www.cs.cqu
 Download My <a href="CV/CV_YongboWang.pdf"><strong class="color-blue-line">Resume/CV</strong></a>
 </p>
 
-<h4 style="border-top: 1px solid #eee; margin-top: 20px;">Research Interests</h4>
+<div class="solid-line"></div>
+<h4>Research Interests</h4>
 <!-- <blockquote>
   <span style="font-size: 10px; font-style: italic; color: #999;">
     <i>
