--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Yongbo Wang
 picture: life
 ---
-<div class="page-header" style="border-bottom: 2px solid #eee;">
+<div class="page-header">
   <div class="row">
     <div class="col-sm-12">
       <h3>
