--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@ Download My <a href="CV/CV_YongboWang.pdf"><strong class="color-blue-line">Resum
   <li>Deep Learning</li>
 </ul>
 
+<div class="solid-line"></div>
 <h4><span style="color: red;">News!</span></h4>
 <p>
 <span style="color: red;"><strong>We won the second place in the finals </strong></span>in the 
@@ -75,6 +76,7 @@ Download My <a href="CV/CV_YongboWang.pdf"><strong class="color-blue-line">Resum
 <a href="http://www.datadreams.org/">Big Data and Artificial Intelligence Innovation and Entrepreneurship Contest of 2017</a>. I was the team leader, my nickname is Boson in this competition. This is one of the competitions about machine learning and NLP in China. 
 </p>
 
+<div class="solid-line"></div>
 <h4>Recent Highlights</h4>
 <!-- <blockquote>
   <span style="font-size: 10px; font-style: italic; color: #999;">
@@ -85,6 +87,7 @@ Download My <a href="CV/CV_YongboWang.pdf"><strong class="color-blue-line">Resum
   {% include paper.html paper=post %}
 {% endfor %}
 
+<div class="solid-line"></div>
 <h4>Experience</h4>
 <ul>
   <li>
@@ -107,6 +110,7 @@ Download My <a href="CV/CV_YongboWang.pdf"><strong class="color-blue-line">Resum
   </li>
 </ul>
 
+<div class="solid-line"></div>
 <h4>Awards</h4>
 <ul>
   <li><strong>2nd place,</strong> The Intelligent Investment Adviser Game of the Big Data and Artificial Intelligence Innovation and Entrepreneurship Contest of 2017.</li>
@@ -117,6 +121,7 @@ Download My <a href="CV/CV_YongboWang.pdf"><strong class="color-blue-line">Resum
   <li>2nd prize, Scholarship, Chongqing University (2012).</li>
 </ul>
 
+<div class="solid-line"></div>
 <h4>Others</h4>
 <p>
 Click <a href="self-evaluation.html"><strong class="color-blue-line">here</strong></a> to see my Skills and Self-evaluation.
