--- a/projects.html
+++ b/projects.html
@@ -21,8 +21,8 @@ picture: code
 <dl class="dl-horizontal">
   <dt>Dec 2017, Present</dt>
   <dd>
-    <i>The question answering system of the law</i><br/>
-  The purpose is to make an automatic question answering system based on Chinese law (on-going).
+    <i>The Real-Time Summarization of Twitter</i><br/>
+	For more information on this task, TREC official website：http://trecrts.github.io/
   </dd>
 </dl>
 
