--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ I am now a visiting student in the AI&amp;NLP team in <a href="http://www.cs.cqu
 <a href="http://bmi.siat.ac.cn/index.php/qu/">Qiang Qu</a> and Prof. <a href="http://minyang.me">Min Yang</a> since December 2017. Meanwhile, I'm a M.S. student at the Department of Computer Science and Technology, Chongqing University (<a href="http://english.cqu.edu.cn/">CQU</a>), under the supervision of Prof. <a href="http://yz.cqu.edu.cn/view_teacher.php?tid=14025">Yunni Xia</a> since September 2015. Previously, I received my bachelor degree in CQU in June, 2015.
 </p>
 <p>
-Download My <a href="CV/CV_YongboWang.pdf"><strong class="color-blue-line">Resume/CV</strong></a>
+My <a href="CV/CV_YongboWang.pdf"><strong class="color-blue-line">Resume/CV</strong></a>
 </p>
 
 <div class="solid-line"></div>
@@ -73,7 +73,7 @@ Download My <a href="CV/CV_YongboWang.pdf"><strong class="color-blue-line">Resum
 <p>
 <span style="color: red;"><strong>We won the second place in the finals </strong></span>in the 
 <a href="http://www.datadreams.org/race-race-4.html">Intelligent Investment Adviser Game</a> of the 
-<a href="http://www.datadreams.org/">Big Data and Artificial Intelligence Innovation and Entrepreneurship Contest of 2017</a>. I was the team leader, my nickname is Boson in this competition. This is one of the competitions about machine learning and NLP in China. 
+<a href="http://www.datadreams.org/">Big Data and Artificial Intelligence Innovation and Entrepreneurship Contest of 2017</a>. This is one of the competitions about machine learning and NLP in China. 
 </p>
 
 <div class="solid-line"></div>
@@ -91,18 +91,23 @@ Download My <a href="CV/CV_YongboWang.pdf"><strong class="color-blue-line">Resum
 <h4>Experience</h4>
 <ul>
   <li>
-    <strong>Research Intern</strong> | BMI, SIAT, Chinese Academy of Sciences<br/>
+    <strong>Research Intern</strong> | BMI, Chinese Academy of Sciences<br/>
     <strong>Topic:</strong> Natural Language Processing<br/>
     Dec 2017 - present
   </li>
   <li>
+    <strong>Research Intern</strong> | Aizhihui Technology Co., Ltd., Shenzhen, China<br/>
+    <strong>Topic:</strong> Machine Learning and NLP<br/>
+    Jul 2016 - Nov 2017
+  </li>
+<!--   <li>
     <strong>Research Intern</strong> | 
     <a href="http://www.aitech.xin">
       <span class="color-blue-line">Aizhihui Technology Co., Ltd.</span>
     </a>, Shenzhen, China<br/>
     <strong>Topic:</strong> Machine Learning and NLP<br/>
     Jul 2016 - Nov 2017
-  </li>
+  </li> -->
   <li>
     <strong>Web Development Intern</strong> | Chongqing Lingdao Technology Co. Ltd., Chongqing, China<br/>
     <strong>Topic:</strong> Web Developer<br/>
