--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@ picture: life
     <div class="col-sm-6">
       <address>
         School of Software Theory and Technology Chongqing Key Lab<br/>
-        <a href="http://www.cs.cqu.edu.cn/">College of Computer Science</a><br/>
-        <a href="http://english.cqu.edu.cn/">Chongqing University</a><br/>
+        <!-- <a href="http://www.cs.cqu.edu.cn/">College of Computer Science</a><br/>
+        <a href="http://english.cqu.edu.cn/">Chongqing University</a><br/> -->
+    	College of Computer Science<br/>
+        Chongqing University (<a href="http://english.cqu.edu.cn/">CQU</a>)<br/>
         Shapingba District, Chongqing, China<br/>
 <!--         <span style="font-size: 10px; font-style: italic; color: #999;">
         [ <a href="https://en.wikipedia.org/wiki/Project_211">Project 211</a> and 
@@ -25,27 +27,23 @@ picture: life
       </address>
     </div>
     <div class="col-sm-4">
-      <a href="mailto:yongbowin@outlook.com"><span class="glyphicon glyphicon-envelope"></span> Email</a>: yongbowin@outlook.com<br/>
+      <span class="glyphicon glyphicon-envelope"></span> Email: <a href="mailto:yongbowin@outlook.com">yongbowin@outlook.com</a><br/>
       <a href="tel:+86-13637995210"><span class="glyphicon glyphicon-phone"></span>+86 136 3799 5210</a><br/>
-      <a href="http://www.linkedin.com/in/yongbo-wang/">
-        <img src="img/ico/linkedin.png" alt=""/>
-       LinkedIn</a><br/>
-      <a href="https://yongbowin.github.io/">
-        <img src="img/ico/homepage.png" alt=""/>
-       Homepage</a>: https://yongbowin.github.io<br/>
+      <a href="http://www.linkedin.com/in/yongbo-wang/"><img src="img/ico/linkedin.png" alt=""/> LinkedIn</a><br/>
+      <img src="img/ico/homepage.png" alt=""/> Homepage: <a href="https://yongbowin.github.io/">https://yongbowin.github.io</a><br/>
     </div>
   </div>
 </div>
 
 <p>
 <!-- <span style="color: #527bbd;"><strong>Welcome Yongbo's homepage.</strong></span> -->
-<div style="text-align: center;color: #333!important;width: 100%;"><h4>Welcome to Yongbo's homepage!</h4></div>
+<div style="text-align: center;color: #333!important;width: 100%;"><h4>Welcome!</h4></div>
 </p>
 
 <h4>Biography</h4>
 <p>
 I am now a visiting student in the AI&amp;NLP team in <a href="http://www.cs.cqu.edu.cn/">BMI</a>, <a href="http://www.siat.ac.cn">SIAT</a>, <a href="http://www.cas.cn">Chinese Academy of Sciences</a>, under the supervision of Prof. 
-<a href="http://bmi.siat.ac.cn/index.php/qu/">Qiang Qu</a> and Prof. <a href="http://minyang.me">Min Yang</a> since December 2017. Meanwhile, I'm a M.S. student at the Department of Computer Science and Technology, Chongqing University (<a href="http://english.cqu.edu.cn/">CQU</a>), under the supervision of Prof. <a href="http://yz.cqu.edu.cn/view_teacher.php?tid=14025">Yunni Xia</a> since September 2015. Previously, I received my bachelor degree in CQU in June, 2015.
+<a href="http://bmi.siat.ac.cn/index.php/qu/">Qiang Qu</a> and Prof. <a href="http://minyang.me">Min Yang</a> since December 2017. Meanwhile, I'm a M.S. student at the Department of Computer Science and Technology, Chongqing University, under the supervision of Prof. <a href="http://yz.cqu.edu.cn/view_teacher.php?tid=14025">Yunni Xia</a> since September 2015. Previously, I received my bachelor degree in CQU in June, 2015.
 </p>
 <p>
 My <a href="CV/CV_YongboWang.pdf"><strong class="color-blue-line">Resume/CV</strong></a>
