--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@ picture: life
 
 <h4>Biography</h4>
 <p>
-I am now a visiting student in the AI&amp;NLP team in <a href="http://www.cs.cqu.edu.cn/">BMI</a>, <a href="http://www.siat.ac.cn">SIAT</a>, <a href="http://www.cas.cn">Chinese Academy of Sciences</a>, under the supervision of Prof. 
-<a href="http://bmi.siat.ac.cn/index.php/qu/">Qiang Qu</a> and Prof. <a href="http://minyang.me">Min Yang</a> since December 2017. Meanwhile, I'm a M.S. student at the Department of Computer Science and Technology, Chongqing University, under the supervision of Prof. <a href="http://yz.cqu.edu.cn/view_teacher.php?tid=14025">Yunni Xia</a> since September 2015. Previously, I received my bachelor degree in CQU in June, 2015.
+I am now a visiting student in the AI&amp;NLP team in SIAT, <a href="http://www.cas.cn">Chinese Academy of Sciences</a>, under the supervision of Prof. <a href="http://minyang.me">Min Yang</a> since December 2017. Meanwhile, I'm a M.S. student at the Department of Computer Science and Technology, CQU, under the supervision of Prof. <a href="http://yz.cqu.edu.cn/view_teacher.php?tid=14025">Yunni Xia</a> since September 2015. Previously, I received my bachelor degree in CQU in June, 2015.
 </p>
 <p>
 My <a href="CV/CV_YongboWang.pdf"><strong class="color-blue-line">Resume/CV</strong></a>
