--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ picture: life
   <div class="row">
     <div class="col-sm-12">
       <h3>
-        <strong>Yongbo Wang</strong> (<span style="font-family: 'STXingkai'; font-size: 26px;">王勇博</span>)
+        <strong style="font-family: 'Times New Roman'; font-size: 24px;">Yongbo Wang</strong> (<span style="font-family: 'STXingkai'; font-size: 26px;">王勇博</span>)
       </h3>
     </div>
   </div>
