--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ picture: life
 I am now a visiting student in the AI&amp;NLP team in SIAT, <a href="http://www.cas.cn">Chinese Academy of Sciences</a>, under the supervision of Prof. <a href="http://minyang.me">Min Yang</a> since December 2017. Meanwhile, I'm a M.S. student at the Department of Computer Science and Technology, CQU, under the supervision of Prof. <a href="http://yz.cqu.edu.cn/view_teacher.php?tid=14025">Yunni Xia</a> since September 2015. Previously, I received my bachelor degree in CQU in June, 2015.
 </p>
 <p>
-My <a href="CV/CV_YongboWang.pdf"><strong class="color-blue-line">Resume/CV</strong></a>
+My <a href="CV/CV_YongboWang.pdf"><strong class="color-blue-line">Resume/CV</strong></a> (Download)
 </p>
 
 <div class="solid-line"></div>
@@ -72,6 +72,39 @@ My <a href="CV/CV_YongboWang.pdf"><strong class="color-blue-line">Resume/CV</str
 <a href="http://www.datadreams.org/race-race-4.html">Intelligent Investment Adviser Game</a> of the 
 <a href="http://www.datadreams.org/">Big Data and Artificial Intelligence Innovation and Entrepreneurship Contest of 2017</a>. This is one of the competitions about machine learning and NLP in China. 
 </p>
+
+<div class="solid-line"></div>
+<h4>Education</h4>
+<ul>
+  <li>
+    <strong>Master</strong> | 
+    <span>
+      The Department of Computer Science and Technology, Chongqing University
+    </span>, 
+    2015 - 2018 (Expected)<br/>
+    <strong>lab: </strong><a href="http://www.cs.cqu.edu.cn/">The School of Software Theory and Technology Chongqing Key Lab</a>, (recommended postgraduate)<br/>
+    <strong>supervisor: </strong><a href="http://yz.cqu.edu.cn/view_teacher.php?tid=14025">Prof. Yunni Xia</a><br/>
+    <strong>research area: </strong>Resource scheduling based on Cloud Computing
+  </li>
+  <li>
+    <strong>Bachelor</strong> | 
+    <span>
+      The Department of Computer Science and Technology, Chongqing University
+    </span>, 
+    2011 - 2015<br/>
+    <strong>major: </strong>Computer Science and Technology
+  </li>
+  <li>
+    <strong>Bachelor</strong> | 
+    <span>
+      <a href="http://ceba.cqu.edu.cn/">The School of economics and Business Administration</a>, Chongqing University
+    </span>, 
+    2012 - 2015<br/>
+    <strong>minor: </strong>Business Administration<br/>
+    <strong>supervisor: </strong><a href="http://ceba.cqu.edu.cn/nry5_1.jsp?urltype=news.NewsContentUrl&wbtreeid=2237&wbnewsid=1567">Prof. Wei Yan</a><br/>
+    <strong>research area: </strong>Performance Management
+  </li>
+</ul>
 
 <div class="solid-line"></div>
 <h4>Recent Highlights</h4>
