--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@ My <a href="CV/CV_YongboWang.pdf"><strong class="color-blue-line">Resume/CV</str
       The Department of Computer Science and Technology, Chongqing University
     </span>, 
     2015 - 2018 (Expected)<br/>
-    <strong>lab: </strong><a href="http://www.cs.cqu.edu.cn/">The School of Software Theory and Technology Chongqing Key Lab</a>, (recommended postgraduate)<br/>
-    <strong>supervisor: </strong><a href="http://yz.cqu.edu.cn/view_teacher.php?tid=14025">Prof. Yunni Xia</a><br/>
-    <strong>research area: </strong>Resource scheduling based on Cloud Computing
+    Lab: <a href="http://www.cs.cqu.edu.cn/">The School of Software Theory and Technology Chongqing Key Lab</a>, (recommended postgraduate)<br/>
+    Supervisor: <a href="http://yz.cqu.edu.cn/view_teacher.php?tid=14025">Prof. Yunni Xia</a><br/>
+    Research area: Resource scheduling based on Cloud Computing
   </li>
   <li>
     <strong>Bachelor</strong> | 
@@ -92,7 +92,7 @@ My <a href="CV/CV_YongboWang.pdf"><strong class="color-blue-line">Resume/CV</str
       The Department of Computer Science and Technology, Chongqing University
     </span>, 
     2011 - 2015<br/>
-    <strong>major: </strong>Computer Science and Technology
+    Major: Computer Science and Technology
   </li>
   <li>
     <strong>Bachelor</strong> | 
@@ -100,9 +100,9 @@ My <a href="CV/CV_YongboWang.pdf"><strong class="color-blue-line">Resume/CV</str
       <a href="http://ceba.cqu.edu.cn/">The School of economics and Business Administration</a>, Chongqing University
     </span>, 
     2012 - 2015<br/>
-    <strong>minor: </strong>Business Administration<br/>
-    <strong>supervisor: </strong><a href="http://ceba.cqu.edu.cn/nry5_1.jsp?urltype=news.NewsContentUrl&wbtreeid=2237&wbnewsid=1567">Prof. Wei Yan</a><br/>
-    <strong>research area: </strong>Performance Management
+    Minor: Business Administration<br/>
+    Supervisor: <a href="http://ceba.cqu.edu.cn/nry5_1.jsp?urltype=news.NewsContentUrl&wbtreeid=2237&wbnewsid=1567">Prof. Wei Yan</a><br/>
+    Research area: Performance Management
   </li>
 </ul>
 
