--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ picture: life
 
 <h4>Biography</h4>
 <p>
-I am now a visiting student in the AI&amp;NLP team in SIAT, <a href="http://www.cas.cn">Chinese Academy of Sciences</a>, under the supervision of Prof. <a href="http://minyang.me">Min Yang</a> since December 2017. Meanwhile, I'm a M.S. student at the Department of Computer Science and Technology, CQU, under the supervision of Prof. <a href="http://yz.cqu.edu.cn/view_teacher.php?tid=14025">Yunni Xia</a> since September 2015. Previously, I received my bachelor degree in CQU in June, 2015.
+I am now an associate quality engineer in <a href="https://www.redhat.com">Red Hat</a>, Beijing, since October 2018. Before this, I was a visiting student in the AI&NLP team in SIAT, Chinese Academy of Sciences, under the supervision of Prof. <a href="http://minyang.me">Min Yang</a> since December 2017. Previously, I got my master's degree in CS from CQU, under the supervision of Prof. <a href="http://yz.cqu.edu.cn/view_teacher.php?tid=14025">Yunni Xia</a> in June 2018, and double bachelor degree in CS and Business Administration in 2015, respectively.
 </p>
 <p>
 My <a href="CV/CV_YongboWang.pdf"><strong class="color-blue-line">Resume/CV</strong></a> (Download)
@@ -82,9 +82,9 @@ My <a href="CV/CV_YongboWang.pdf"><strong class="color-blue-line">Resume/CV</str
       The Department of Computer Science and Technology, Chongqing University
     </span>, 
     2015 - 2018<br/>
-    Lab: <a href="http://www.cs.cqu.edu.cn/">The School of Software Theory and Technology Chongqing Key Lab</a>, (recommended postgraduate)<br/>
-    Supervisor: <a href="http://yz.cqu.edu.cn/view_teacher.php?tid=14025">Prof. Yunni Xia</a><br/>
-    Research area: Resource scheduling based on Cloud Computing
+    <!-- Lab: <a href="http://www.cs.cqu.edu.cn/">The School of Software Theory and Technology Chongqing Key Lab</a>, (recommended postgraduate)<br/> -->
+    <!-- Supervisor: <a href="http://yz.cqu.edu.cn/view_teacher.php?tid=14025">Prof. Yunni Xia</a><br/> -->
+    <!-- Research area: Resource scheduling based on Cloud Computing -->
   </li>
   <li>
     <strong>Bachelor</strong> | 
@@ -92,7 +92,7 @@ My <a href="CV/CV_YongboWang.pdf"><strong class="color-blue-line">Resume/CV</str
       The Department of Computer Science and Technology, Chongqing University
     </span>, 
     2011 - 2015<br/>
-    Major: Computer Science and Technology
+    <!-- Major: Computer Science and Technology -->
   </li>
   <li>
     <strong>Bachelor</strong> | 
@@ -100,9 +100,10 @@ My <a href="CV/CV_YongboWang.pdf"><strong class="color-blue-line">Resume/CV</str
       <a href="http://ceba.cqu.edu.cn/">The School of economics and Business Administration</a>, Chongqing University
     </span>, 
     2012 - 2015<br/>
-    Minor: Business Administration<br/>
-    Supervisor: <a href="http://ceba.cqu.edu.cn/nry5_1.jsp?urltype=news.NewsContentUrl&wbtreeid=2237&wbnewsid=1567">Prof. Wei Yan</a><br/>
-    Research area: Performance Management
+    Double bachelor degree
+    <!-- Minor: Business Administration<br/> -->
+    <!-- Supervisor: <a href="http://ceba.cqu.edu.cn/nry5_1.jsp?urltype=news.NewsContentUrl&wbtreeid=2237&wbnewsid=1567">Prof. Wei Yan</a><br/> -->
+    <!-- Research area: Performance Management -->
   </li>
 </ul>
 
@@ -121,15 +122,20 @@ My <a href="CV/CV_YongboWang.pdf"><strong class="color-blue-line">Resume/CV</str
 <h4>Experience</h4>
 <ul>
   <li>
-    <strong>Research Intern</strong> | BMI, Chinese Academy of Sciences<br/>
-    <strong>Topic:</strong> Natural Language Processing<br/>
-    Dec 2017 - present
+    <strong>Associate Quality Engineer</strong> | <a href="https://www.redhat.com">Red Hat</a><br/>
+    <strong>Topic:</strong> Real Time Kernel<br/>
+    Oct 2018 - present
   </li>
   <li>
+    <strong>Research Intern</strong> | BMI, <a href="http://www.cas.cn/">Chinese Academy of Sciences</a><br/>
+    <strong>Topic:</strong> Natural Language Processing<br/>
+    Dec 2017 - Sept 2018
+  </li>
+<!--   <li>
     <strong>Research Intern</strong> | Aizhihui Technology Co., Ltd., Shenzhen, China<br/>
     <strong>Topic:</strong> Machine Learning and NLP<br/>
     Jul 2016 - Nov 2017
-  </li>
+  </li> -->
 <!--   <li>
     <strong>Research Intern</strong> | 
     <a href="http://www.aitech.xin">
@@ -138,11 +144,11 @@ My <a href="CV/CV_YongboWang.pdf"><strong class="color-blue-line">Resume/CV</str
     <strong>Topic:</strong> Machine Learning and NLP<br/>
     Jul 2016 - Nov 2017
   </li> -->
-  <li>
+<!--   <li>
     <strong>Web Development Intern</strong> | Chongqing Lingdao Technology Co. Ltd., Chongqing, China<br/>
     <strong>Topic:</strong> Web Developer<br/>
     Jul 2015 - Oct 2015
-  </li>
+  </li> -->
 </ul>
 
 <div class="solid-line"></div>
@@ -157,9 +163,15 @@ My <a href="CV/CV_YongboWang.pdf"><strong class="color-blue-line">Resume/CV</str
 </ul>
 
 <div class="solid-line"></div>
+<h4>Skills</h4>
+<p>
+Python, Java, Shell, Linux, Docker, Hadoop, HBase, Sqoop, Pig, Elasticsearch, Tensorflow, Keras, MySQL,MongoDB, SVN, Git, Django, Web frameworks and skills (Django, SpringMVC, Struts2, HTML, Javascript, Ajax).
+</p>
+
+<div class="solid-line"></div>
 <h4>Others</h4>
 <p>
-Click <a href="self-evaluation.html"><strong class="color-blue-line">here</strong></a> to see my Skills and Self-evaluation.
+Click <a href="self-evaluation.html"><strong class="color-blue-line">here</strong></a> to see my Self-evaluation.
 </p>
 <br/>
 <p>
