--- a/index.html
+++ b/index.html
@@ -69,8 +69,7 @@ My <a href="CV/CV_YongboWang.pdf"><strong class="color-blue-line">Resume/CV</str
 <h4><span style="color: red;">News!</span></h4>
 <p>
 <span style="color: red;"><strong>We won the second place in the finals </strong></span>in the 
-<a href="http://www.datadreams.org/race-race-4.html">Intelligent Investment Adviser Game</a> of the 
-<a href="http://www.datadreams.org/">Big Data and Artificial Intelligence Innovation and Entrepreneurship Contest of 2017</a>. This is one of the competitions about machine learning and NLP in China. 
+<a href="http://www.datadreams.org/race-race-4.html">Intelligent Investment Adviser Game</a> of the Big Data and Artificial Intelligence Innovation and Entrepreneurship Contest of 2017. This is one of the competitions about machine learning and NLP in China. 
 </p>
 
 <div class="solid-line"></div>
@@ -95,12 +94,12 @@ My <a href="CV/CV_YongboWang.pdf"><strong class="color-blue-line">Resume/CV</str
     <!-- Major: Computer Science and Technology -->
   </li>
   <li>
-    <strong>Bachelor</strong> | 
+    <strong>Bachelor (Double degree)</strong> | 
     <span>
-      <a href="http://ceba.cqu.edu.cn/">The School of economics and Business Administration</a>, Chongqing University
+      <!-- <a href="http://ceba.cqu.edu.cn/">The School of economics and Business Administration</a>, Chongqing University -->
+      The School of economics and Business Administration, Chongqing University
     </span>, 
     2012 - 2015<br/>
-    Double bachelor degree
     <!-- Minor: Business Administration<br/> -->
     <!-- Supervisor: <a href="http://ceba.cqu.edu.cn/nry5_1.jsp?urltype=news.NewsContentUrl&wbtreeid=2237&wbnewsid=1567">Prof. Wei Yan</a><br/> -->
     <!-- Research area: Performance Management -->
@@ -122,11 +121,13 @@ My <a href="CV/CV_YongboWang.pdf"><strong class="color-blue-line">Resume/CV</str
 <h4>Experience</h4>
 <ul>
   <li>
+    <img src="img/logo/redhat_logo.jpg">
     <strong>Associate Quality Engineer</strong> | <a href="https://www.redhat.com">Red Hat</a><br/>
     <strong>Topic:</strong> Real Time Kernel<br/>
     Oct 2018 - present
   </li>
   <li>
+    <img src="img/logo/cas_logo.jpg">
     <strong>Research Intern</strong> | BMI, <a href="http://www.cas.cn/">Chinese Academy of Sciences</a><br/>
     <strong>Topic:</strong> Natural Language Processing<br/>
     Dec 2017 - Sept 2018
