--- a/index.html
+++ b/index.html
@@ -121,13 +121,13 @@ My <a href="CV/CV_YongboWang.pdf"><strong class="color-blue-line">Resume/CV</str
 <h4>Experience</h4>
 <ul>
   <li>
-    <img src="img/logo/redhat_logo.jpg">
+    <img style="width: 30px!important; height: 30px!important;" src="img/logo/redhat_logo.jpg">
     <strong>Associate Quality Engineer</strong> | <a href="https://www.redhat.com">Red Hat</a><br/>
     <strong>Topic:</strong> Real Time Kernel<br/>
     Oct 2018 - present
   </li>
   <li>
-    <img src="img/logo/cas_logo.jpg">
+    <img style="width: 30px!important; height: 30px!important;" src="img/logo/cas_logo.jpg">
     <strong>Research Intern</strong> | BMI, <a href="http://www.cas.cn/">Chinese Academy of Sciences</a><br/>
     <strong>Topic:</strong> Natural Language Processing<br/>
     Dec 2017 - Sept 2018
