--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@ picture: life
   <div class="row">
     <div class="col-sm-6">
       <address>
-        School of Software Theory and Technology Chongqing Key Lab<br/>
+        <!-- School of Software Theory and Technology Chongqing Key Lab<br/> -->
         <!-- <a href="http://www.cs.cqu.edu.cn/">College of Computer Science</a><br/>
         <a href="http://english.cqu.edu.cn/">Chongqing University</a><br/> -->
-    	College of Computer Science<br/>
-        Chongqing University (<a href="http://english.cqu.edu.cn/">CQU</a>)<br/>
-        Shapingba District, Chongqing, China<br/>
+        Master & Bachelor at
+        Computer Science, Chongqing University (<a href="http://english.cqu.edu.cn/">CQU</a>)<br/><br/>
+        Working at <a href="https://www.redhat.com">Red Hat</a>, Beijing, China<br/>
 <!--         <span style="font-size: 10px; font-style: italic; color: #999;">
         [ <a href="https://en.wikipedia.org/wiki/Project_211">Project 211</a> and 
         <a href="https://en.wikipedia.org/wiki/Project_985">Project 985</a> members ]<br/>
@@ -28,8 +28,8 @@ picture: life
     </div>
     <div class="col-sm-4">
       <span class="glyphicon glyphicon-envelope"></span> Email: <a href="mailto:yongbowin@outlook.com">yongbowin@outlook.com</a><br/>
-      <a href="tel:+86-13637995210"><span class="glyphicon glyphicon-phone"></span>+86 136 3799 5210</a><br/>
-      <a href="http://www.linkedin.com/in/yongbo-wang/"><img src="img/ico/linkedin.png" alt=""/> LinkedIn</a><br/>
+      <span class="glyphicon glyphicon-phone"></span>Phone: <a href="tel:+86-13637995210">+86 136 3799 5210</a><br/>
+      <img src="img/ico/linkedin.png" alt=""/>LinkedIn: <a href="http://www.linkedin.com/in/yongbo-wang/">here</a><br/>
       <img src="img/ico/homepage.png" alt=""/> Homepage: <a href="https://yongbowin.github.io/">https://yongbowin.github.io</a><br/>
     </div>
   </div>
