--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ picture: life
         <a href="http://english.cqu.edu.cn/">Chongqing University</a><br/> -->
         Master & Bachelor at
         Computer Science, Chongqing University (<a href="http://english.cqu.edu.cn/">CQU</a>)<br/><br/>
-        Working at <a href="https://www.redhat.com">Red Hat</a>, Beijing, China<br/>
+        Now working at <a href="https://www.redhat.com">Red Hat</a> Inc., Beijing, China<br/>
 <!--         <span style="font-size: 10px; font-style: italic; color: #999;">
         [ <a href="https://en.wikipedia.org/wiki/Project_211">Project 211</a> and 
         <a href="https://en.wikipedia.org/wiki/Project_985">Project 985</a> members ]<br/>
@@ -42,7 +42,7 @@ picture: life
 
 <h4>Biography</h4>
 <p>
-I am now an associate quality engineer in <a href="https://www.redhat.com">Red Hat</a>, Beijing, since October 2018. Before this, I was a visiting student in the AI&NLP team in SIAT, Chinese Academy of Sciences, under the supervision of Prof. <a href="http://minyang.me">Min Yang</a> since December 2017. Previously, I got my master's degree in CS from CQU, under the supervision of Prof. <a href="http://yz.cqu.edu.cn/view_teacher.php?tid=14025">Yunni Xia</a> in June 2018, and double bachelor degree in CS and Business Administration in 2015, respectively.
+I am now an associate quality engineer in Red Hat, Beijing, since October 2018. Before this, I was a visiting student in the AI&NLP team in SIAT, <a href="http://www.cas.cn/">Chinese Academy of Sciences</a>, under the supervision of Prof. <a href="http://minyang.me">Min Yang</a> since December 2017. Previously, I got my master's degree in CS from CQU, under the supervision of Prof. <a href="http://yz.cqu.edu.cn/view_teacher.php?tid=14025">Yunni Xia</a> in June 2018, and double bachelor degree in CS and Business Administration in 2015, respectively.
 </p>
 <p>
 My <a href="CV/CV_YongboWang.pdf"><strong class="color-blue-line">Resume/CV</strong></a> (Download)
@@ -122,13 +122,13 @@ My <a href="CV/CV_YongboWang.pdf"><strong class="color-blue-line">Resume/CV</str
 <ul>
   <li>
     <img style="width: 30px!important; height: 30px!important;" src="img/logo/redhat_logo.jpg">
-    <strong>Associate Quality Engineer</strong> | <a href="https://www.redhat.com">Red Hat</a><br/>
+    <strong>Associate Quality Engineer</strong> | Red Hat<br/>
     <strong>Topic:</strong> Real Time Kernel<br/>
     Oct 2018 - present
   </li>
   <li>
     <img style="width: 30px!important; height: 30px!important;" src="img/logo/cas_logo.jpg">
-    <strong>Research Intern</strong> | BMI, <a href="http://www.cas.cn/">Chinese Academy of Sciences</a><br/>
+    <strong>Research Intern</strong> | BMI, Chinese Academy of Sciences<br/>
     <strong>Topic:</strong> Natural Language Processing<br/>
     Dec 2017 - Sept 2018
   </li>
@@ -160,7 +160,7 @@ My <a href="CV/CV_YongboWang.pdf"><strong class="color-blue-line">Resume/CV</str
   <li>2nd prize, Scholarship, Chongqing University (2016).</li> -->
   <li>2nd prize, Chongqing Division, China Undergraduate Mathematical Contest in Modeling (2013).</li>
   <li>National Endeavor Scholarship (top 5%) (2012).</li>
-  <li>2nd prize, Scholarship, Chongqing University (2012).</li>
+  <li>2nd prize, Scholarship, Chongqing University (top 3%) (2012).</li>
 </ul>
 
 <div class="solid-line"></div>
