--- a/self-evaluation.html
+++ b/self-evaluation.html
@@ -21,7 +21,7 @@ in Shenzhen, China. During my internship, I have done much research work on the 
 Creative and well-motivated for high-quality research. Work well with a multicultural and diverse work force.
 </p>
 <p>
-我一直很欣赏这句话：只有足够努力，才能看起来毫不费力。
+只有足够努力，才能看起来毫不费力。
 </p>
 <br/>
   
